--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <div id="colors">Header</div>
 <input id="color-picker type="color" value="#ffffff"/>
+
+<script src="https://unpkg.com/brain.js@1.1.2/browser.min.js"></script>
+<script src="training.js"></script>
