Added basic html markup around the inputs etc

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<div id="colors">Header</div>
-<input id="color-picker type="color" value="#ffffff"/>
-
-<script src="https://unpkg.com/brain.js@1.1.2/browser.min.js"></script>
-<script src="training.js"></script>
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div id="colors">Header</div>
+    <input id="color-picker" type="color" value="#ffffff" />
+    <script src="training.js"></script>
+    <script src="https://unpkg.com/brain.js@1.1.2/browser.min.js"></script>
+  </body>
+</html>
